# auth

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  auth.db  docker-compose.yml  private_key.pem
sjallabong-auth/: README.md  package.json
sjallabong-auth/src/: client.ts  index.ts
src/: clients.rs  db.rs  error.rs  errors.rs  jwt.rs  main.rs  password.rs  templates.rs  util.rs
src/entity/: access_token.rs  auth_code.rs  client.rs  mod.rs  refresh_token.rs  user.rs
src/entity/token/: access.rs  auth.rs  mod.rs  refresh.rs
src/handler/: auth.code-workspace  auth.rs  geoloc.rs  jwks.rs  mod.rs  register.rs  revoke.rs  sdk.rs  success.rs  token.rs  userinfo.rs
src/handler/update/: user.rs
src/middleware/: client.rs  log.rs  mod.rs  security.rs  user.rs
static/: button.js  sdk.js
templates/: base.html  error.html  login.html  pw_toggle.html  register.html  sdk.js  success.html
