[package]
name = "homepage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
askama = "0.14.0"
axum = "0.8.4"
base64 = "0.22.1"
bcrypt = "0.17.0"
chrono = "0.4.41"
rand = "0.9.2"
reqwest = "0.12.23"
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
url = "2.5.4"
uuid = { version = "1.18.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
