[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
askama = "0.14.0"
axum = "0.8.4"
base64 = "0.22.1"
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
maxminddb = "0.26.0"
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = "0.12.23"
ring = "0.17.14"
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = "1.0.219"
serde_json = "1.0.142"
sha2 = "0.10.9"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.18.0", features = ["v4"] }
